Adicionado autenticação por API, também adicionamos o zip da api node que utilizamos 'api-usuario'

--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -1,8 +1,13 @@
 <h4 class="text-center">Login</h4>
 
-<form class="form mt-4">
+<form class="form mt-4" (ngSubmit)="login()">
   <div class="form-group">
-    <input class="form-control" placeholder="Nome do usuário" />
+    <input
+      class="form-control"
+      placeholder="Nome do usuário"
+      [(ngModel)]="usuario"
+      name="usuario"
+    />
   </div>
 
   <div class="form-group">
@@ -10,6 +15,8 @@
       type="password"
       class="form-control"
       placeholder="Digite sua senha"
+      [(ngModel)]="senha"
+      name="senha"
     />
   </div>
   <button type="submit" class="btn btn-primary btn-block">Login</button>
