--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -7,7 +7,12 @@
       placeholder="Nome do usuário"
       [(ngModel)]="usuario"
       name="usuario"
+      #campoUsuario="ngModel"
+      required
     />
+    <app-mensagem
+    *ngIf="campoUsuario.invalid"
+     mensagem="Campo usuário obrigatório"></app-mensagem>
   </div>
 
   <div class="form-group">
@@ -17,7 +22,12 @@
       placeholder="Digite sua senha"
       [(ngModel)]="senha"
       name="senha"
+      #campoSenha="ngModel"
+      required
     />
+    <app-mensagem
+    *ngIf="campoSenha.invalid"
+     mensagem="Campo senha obrigatório"></app-mensagem>
   </div>
   <button type="submit" class="btn btn-primary btn-block">Login</button>
 </form>
