--- a/src/app/home/novo-usuario/novo-usuario.component.html
+++ b/src/app/home/novo-usuario/novo-usuario.component.html
@@ -1,14 +1,24 @@
 <h4 class="text-center">Registre-se e mostre seu pet ao mundo!</h4>
 
-<form class="form mt-4">
+<form
+  class="form mt-4"
+  [formGroup]="novoUsuarioForm"
+  (ngSubmit)="cadastrarNovoUsuario()"
+>
   <div class="form-group">
-    <input type="text" placeholder="Digite seu e-mail" class="form-control" />
+    <input
+      type="text"
+      placeholder="Digite seu e-mail"
+      class="form-control"
+      formControlName="email"
+    />
   </div>
   <div class="form-group">
     <input
       type="text"
       placeholder="Digite seu nome completo"
       class="form-control"
+      formControlName="fullName"
     />
   </div>
   <div class="form-group">
@@ -16,6 +26,7 @@
       type="text"
       placeholder="Digite seu usuário"
       class="form-control"
+      formControlName="userName"
     />
   </div>
   <div class="form-group">
@@ -23,6 +34,7 @@
       type="password"
       placeholder="Digite sua senha"
       class="form-control"
+      formControlName="password"
     />
   </div>
   <button class="btn btn-primary btn-block">Cadastrar</button>
