--- a/src/app/home/novo-usuario/novo-usuario.component.html
+++ b/src/app/home/novo-usuario/novo-usuario.component.html
@@ -62,6 +62,10 @@
       class="form-control"
       formControlName="password"
     />
+    <app-mensagem
+      *ngIf="novoUsuarioForm.errors?.senhaIgualUsuario"
+      mensagem="Senha deve ser diferente do usuário"
+    ></app-mensagem>
   </div>
   <button class="btn btn-primary btn-block">Cadastrar</button>
 </form>
