--- a/src/app/home/novo-usuario/novo-usuario.component.html
+++ b/src/app/home/novo-usuario/novo-usuario.component.html
@@ -54,6 +54,10 @@
       && novoUsuarioForm.get('userName')?.touched"
       mensagem="Usuário deve ser em letra mínuscula"
     ></app-mensagem>
+    <app-mensagem
+      *ngIf="novoUsuarioForm.get('userName')?.errors?.usuarioExistente"
+      mensagem="Usuário já existe"
+    ></app-mensagem>
   </div>
   <div class="form-group">
     <input
